--- a/death-star/src/main/resources/client/src/enforcer/dashboard/templates/auditTrail.html
+++ b/death-star/src/main/resources/client/src/enforcer/dashboard/templates/auditTrail.html
@@ -1,30 +1,60 @@
 <div class="modal-content">
     <h4 class="grey-text text-darken-1">Change Log</h4>
-    <div ng-repeat="audit in auditTrail" class="row valign-wrapper">
-        <div class="center-align col s2">
-            <i class="large material-icons">account_circle</i>
-            <p class="text-gray bold" style="bottom: 0; font-weight: bold;">{{audit.userAcf2Id}}</p>
-        </div>
-        <div class="card {{audit.type}} col s3" >
-            <div class="card-content">
-                <span class="card-title"><strong>{{audit.header}} | [{{audit.headerDetail}}]</strong></span>
-                <div class="type-bar {{audit.oldStatus}}"></div>
-                <p>{{audit.classPath}}</p>
-                <p>{{audit.detail}}</p>
-                <p class="right-align">{{audit.timeStamp | date: 'yyyy/MM/dd HH:mm:ss'}}</p>
+    <div ng-repeat="audit in auditTrail">
+        <div ng-show="{{audit.update}}" class="row valign-wrapper">
+            <div class="center-align col s2">
+                <i class="large material-icons">account_circle</i>
+                <p class="text-gray bold" style="bottom: 0; font-weight: bold;">{{audit.userAcf2Id}}</p>
+            </div>
+            <div class="card {{audit.type}} col s3" >
+                <div class="card-content">
+                    <span class="card-title"><strong>{{audit.header}} | [{{audit.oldHeaderDetail}}]</strong></span>
+                    <div class="type-bar {{audit.status}}"></div>
+                    <p>{{audit.classPath}}</p>
+                    <p>{{audit.oldDetail}}</p>
+                    <p class="right-align">{{audit.timeStamp | date: 'yyyy/MM/dd HH:mm:ss'}}</p>
+                </div>
+            </div>
+            <div class="col s3 center-align">
+                <i class="large material-icons">trending_flat</i>
+                <p style="font-weight: bold;">{{audit.movedTime | date: 'yyyy/MM/dd HH:mm:ss'}}</p>
+            </div>
+            <div class="card {{audit.type}} col s3" >
+                <div class="card-content">
+                    <span class="card-title"><strong>{{audit.header}} | [{{audit.headerDetail}}]</strong></span>
+                    <div class="type-bar {{audit.status}}"></div>
+                    <p>{{audit.classPath}}</p>
+                    <p>{{audit.detail}}</p>
+                    <p class="right-align">{{audit.movedTime | date: 'yyyy/MM/dd HH:mm:ss'}}</p>
+                </div>
             </div>
         </div>
-        <div class="col s3 center-align">
-            <i class="large material-icons">trending_flat</i>
-            <p style="font-weight: bold;">{{audit.timeStamp}}</p>
-        </div>
-        <div class="card {{audit.type}} col s3" >
-            <div class="card-content">
-                <span class="card-title"><strong>{{audit.header}} | [{{audit.headerDetail}}]</strong></span>
-                <div class="type-bar {{audit.newStatus}}"></div>
-                <p>{{audit.classPath}}</p>
-                <p>{{audit.detail}}</p>
-                <p class="right-align">{{audit.timeStamp | date: 'yyyy/MM/dd HH:mm:ss'}}</p>
+        <div ng-show="!{{audit.update}}" class="row valign-wrapper">
+            <div class="center-align col s2">
+                <i class="large material-icons">account_circle</i>
+                <p class="text-gray bold" style="bottom: 0; font-weight: bold;">{{audit.userAcf2Id}}</p>
+            </div>
+            <div class="card {{audit.type}} col s3" >
+                <div class="card-content">
+                    <span class="card-title"><strong>{{audit.header}} | [{{audit.headerDetail}}]</strong></span>
+                    <div class="type-bar {{audit.oldStatus}}"></div>
+                    <p>{{audit.classPath}}</p>
+                    <p>{{audit.detail}}</p>
+                    <p class="right-align">{{audit.timeStamp | date: 'yyyy/MM/dd HH:mm:ss'}}</p>
+                </div>
+            </div>
+            <div class="col s3 center-align">
+                <i class="large material-icons">trending_flat</i>
+                <p style="font-weight: bold;">{{audit.movedTime | date: 'yyyy/MM/dd HH:mm:ss'}}</p>
+            </div>
+            <div class="card {{audit.type}} col s3" >
+                <div class="card-content">
+                    <span class="card-title"><strong>{{audit.header}} | [{{audit.headerDetail}}]</strong></span>
+                    <div class="type-bar {{audit.newStatus}}"></div>
+                    <p>{{audit.classPath}}</p>
+                    <p>{{audit.detail}}</p>
+                    <p class="right-align">{{audit.movedTime | date: 'yyyy/MM/dd HH:mm:ss'}}</p>
+                </div>
             </div>
         </div>
     </div>
