New Vader Dashboard, bug fixes, refactor
- New button added to Settings that allows user to switch dashboards
between home dashboard and vader dashboard
- Vader dashboard allows user to monitor all metrics in one place,
divided by their vader name
- Arrays per container were removed and instead a single array that
holds all cards has been implemented; this way it is easier to add,
update, and remove cards
- Audits clean along with Metrics; if a vader is removed so are all the
audits associated with it

--- a/death-star/src/main/resources/client/assets/css/enforcer.css
+++ b/death-star/src/main/resources/client/assets/css/enforcer.css
@@ -5,7 +5,6 @@ body {
     font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 400;
     font-size: 0.9em;
-    overflow: hidden;
 }
 
 .New {
@@ -45,6 +44,7 @@ body {
     margin-left: 37.5%;
     margin-right: 37.5%;
     text-align: center;
+    z-index: 10;
 }
 /* Card Decorators */
 .Metric {
