--- a/death-star/src/main/resources/client/assets/css/materialize.css
+++ b/death-star/src/main/resources/client/assets/css/materialize.css
@@ -5534,6 +5534,7 @@ small {
 .card {
   cursor: pointer;
   position: relative;
+  z-index: 0;
   overflow: hidden;
   margin: 0.5rem 0 1rem 0;
   background-color: #fff;
