--- a/death-star/src/main/resources/client/src/enforcer/dashboard/templates/dashboard.html
+++ b/death-star/src/main/resources/client/src/enforcer/dashboard/templates/dashboard.html
@@ -16,20 +16,20 @@
     <!-- Column Headers -->
     <div class="row">
         <div class="col s3">
-            <h5 class="New white-text text-darken-1" style="border-radius: 2px; padding: 5px;;" id="NewCol">New</h5>
-            <div class="grey darken-1 horizline"></div>
+            <h5 class="New white-text text-darken-1 z-depth-2" style="border-radius: 2px; padding: 5px;;" id="NewCol">New</h5>
+            <div class="grey darken-1 horizline" style="margin-top:20px;"></div>
         </div>
         <div class="col s3">
-            <h5 class="Acknowledged white-text text-darken-1" style="border-radius: 2px; padding: 5px;" id="AcknowledgedCol">Acknowledged</h5>
-            <div class="grey darken-1 horizline"></div>
+            <h5 class="Acknowledged white-text text-darken-1 z-depth-2" style="border-radius: 2px; padding: 5px;" id="AcknowledgedCol">Acknowledged</h5>
+            <div class="grey darken-1 horizline" style="margin-top:20px;"></div>
         </div>
         <div class="col s3">
-            <h5 class="Escalated white-text text-darken-1" style="border-radius: 2px; padding: 5px;" id="EscalatedCol">Escalated</h5>
-            <div class="grey darken-1 horizline"></div>
+            <h5 class="Escalated white-text text-darken-1 z-depth-2" style="border-radius: 2px; padding: 5px;" id="EscalatedCol">Escalated</h5>
+            <div class="grey darken-1 horizline" style="margin-top:20px;"></div>
         </div>
         <div class="col s3">
-            <h5 class="History white-text text-darken-1" style="border-radius: 2px; padding: 5px;" id="HistoryCol">History</h5>
-            <div class="grey darken-1 horizline"></div>
+            <h5 class="History white-text text-darken-1 z-depth-2" style="border-radius: 2px; padding: 5px;" id="HistoryCol">History</h5>
+            <div class="grey darken-1 horizline" style="margin-top:20px;"></div>
         </div>
     </div>
 
@@ -118,9 +118,6 @@
                 </li>
             </ul>
         </div>
-    </div>
-
-
     </div>
 
 <!--</div>-->
